add cloduinary package

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,9 @@ ATLAS_DB_LINK = "mongodb+srv://test:Test123@cluster0.y3kde2g.mongodb.net/ecommer
 
 # PORT
 PORT = 5000
+
+
+# CLOUDINARY ACCOUNT
+CLOUD_NAME = "dk48tmihd"
+CLOUD_API_KEY = "625816897424924"
+CLOUD_API_SECRET = "2CzfaFcCIYxdPZrIUoD6sLK7TVs"
