--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "cryptr": "^6.3.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.5"
+    "mongoose": "^8.9.5",
+    "multer": "^1.4.5-lts.1"
   },
   "type": "module"
 }
